Require Java 11 for plexus-compiler-eclipse an javac-errorprone and aspectj